2020-12-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/magic.c: Don't send files which test positive for PCL to
	the HPGL delegate, which is normally 'hp2xx'.  Fixes SourceForge
	bug 607 "Slow to convert HP PCL printer data".

2020-12-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/render.c (DrawImage): Use unique image attribute space
	for MVG symbols.  Fixes oss-fuzz 28111 "Timeout -
	coder_MVG_fuzzer", oss-fuzz 28170 "Stack-overflow - DrawImage",
	and oss-fuzz 28292 "Integer-overflow - DrawPolygonPrimitive".

2020-12-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/render.c (DrawImage): Verify that affine scaling factors
	are not zero.  Fixes oss-fuzz 28293 "Divide-by-zero -
	InverseAffineMatrix".
	(DrawPolygonPrimitive): Thread error status check was at wrong
	scope, resulting in code executing when it should have quit.

2020-12-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/magick_types.h.in: Stop trying to define PTRDIFF_MAX.

2020-11-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/magick_types.h.in: Provide PTRDIFF_MAX for Visual Studio
	if it is missing.

	* fuzzing/oss-fuzz-build.sh: Disable old JPEG support in libtiff.

	* coders/mat.c (ReadMATImage): Use resource-limited memory
	allocator.
	(WriteMATLABImage): Use resource-limited memory allocator.

2020-11-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS.txt: Update the news to the date November 28, 2020.

	* coders/png.c (ReadOneJNGImage): Verify and enforce
	Alpha_compression_method values.  Request that color and alpha
	decoders return just one frame.  Force decoder format to disable
	auto-detection.  Assume that coder messed up and might have
	returned more than one frame.  Fixes oss-fuzz 28013 "Indirect-leak
	. MagickMalloc".

	* magick/memory-private.h (MagickReallocateResourceLimitedMemory):
	Fix typo in macro definition which resulted in a memory
	reallocation leak!
