@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020201206"
-#define public MagickPackageReleaseDate "snapshot-20201206"
+#define public MagickPackageVersionAddendum ".020201208"
+#define public MagickPackageReleaseDate "snapshot-20201208"
